# adaptive-ode-framework

./: .gitignore  .pre-commit-config.yaml  README.md  mypy.ini  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
docker/: Dockerfile  docker-compose.yml
ode_framework/: __init__.py
ode_framework/api/: main.py  schemas.py
ode_framework/models/: database.py
ode_framework/solvers/: __init__.py  base.py  classical.py
ode_framework/tests/: conftest.py  test_classical_solvers.py
ode_framework/utils/: config.py
