[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ode-framework"
version = "0.1.0"
description = "ODE solving framework"
readme = "README.md"
requires-python = ">=3.9"

[tool.black]
line-length = 100
target-version = ["py39"]

[tool.mypy]
python_version = "3.9"
strict = true

[[tool.mypy.overrides]]
module = ["scipy.*", "sklearn.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["ode_framework/tests"]
addopts = "-v --cov=ode_framework --cov-report=term-missing"

[tool.coverage.run]
source = ["ode_framework"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
]
